--- a/wechat/pages/mainAddress/mainAddress.wxml
+++ b/wechat/pages/mainAddress/mainAddress.wxml
@@ -9,36 +9,20 @@
             </block>
         </swiper>
     </view>
-    <view class="page_section">
-        <navigator url="/pages/deliver/deliver" open-type="navigate" class="box">
-            <image src="../resourse/icon/send.jpg" class="icon" mode="" />
-            <view class="box-txt">
-                <text class="box-text-up">寄快递</text>
-                <text class="box-txt-down">一小时取件</text>
-            </view>
-        </navigator>
-        <navigator url="/pages/expressCheck/expressCheck" open-type="navigate" class="box">
-            <image src="../resourse/icon/check.jpg" class="icon" mode="" />
-            <view class="box-txt">
-                <text class="box-text-up">快递查询</text>
-                <text class="box-txt-down">追踪快件状态</text>
-            </view>
-        </navigator>
-    </view>
     <view class="block_view">
         <view class="page_section">
         <navigator url="/pages/tongcheng/tongcheng" open-type="navigate" class="power">
             <image src="../resourse/power/1.png" class="icon" mode="" />
             <view class="box-txt">
-                <text class="box-text-up">同城急送</text>
-                <text class="box-txt-down">平均一小时送全城</text>
+                <text class="box-txt-up">课程学术</text>
+                <text class="box-txt-down">课程表、选课、成绩、考试</text>
             </view>
         </navigator>
         <navigator url="/pages/jidajian/jidajian" open-type="navigate" class="power">
             <image src="../resourse/power/2.png" class="icon" mode="" />
             <view class="box-txt">
-                <text class="box-text-up">寄大件</text>
-                <text class="box-txt-down">20KG以上优惠</text>
+                <text class="box-txt-up">行政服务</text>
+                <text class="box-txt-down">请假、宿舍、办证</text>
             </view>
         </navigator>
         </view>
@@ -46,15 +30,15 @@
           <navigator url="/pages/piliangji/piliangji" open-type="navigate" class="power">
             <image src="../resourse/power/3.png" class="icon" mode="" />
             <view class="box-txt">
-                <text class="box-text-up">批量寄</text>
-                <text class="box-txt-down">便捷寄多个快递</text>
+                <text class="box-txt-up">财务后勤</text>
+                <text class="box-txt-down">缴费、查询、后勤</text>
             </view>
         </navigator>
         <navigator url="/pages/deliver/deliver" open-type="navigate" class="power2">
             <image src="../resourse/power/4.png" class="icon" mode="" />
             <view class="box-txt">
-                <text class="box-text-up">港澳台</text>
-                <text class="box-txt-down">一小时取件</text>
+                <text class="box-txt-up">图书服务</text>
+                <text class="box-txt-down">检索、借阅、资源</text>
             </view>
         </navigator>
         </view>
@@ -62,21 +46,33 @@
           <navigator url="/pages/deliver/deliver" open-type="navigate" class="power">
             <image src="../resourse/power/5.png" class="icon" mode="" />
             <view class="box-txt">
-                <text class="box-text-up">生鲜寄</text>
-                <text class="box-txt-down">生鲜果蔬\n新鲜直达</text>
+                <text class="box-txt-up">校园社交</text>
+                <text class="box-txt-down">活动、社团、论坛</text>
             </view>
         </navigator>
-        <navigator url="/pages/deliver/deliver" open-type="navigate" class="power1">
+        <navigator url="/pages/deliver/deliver" open-type="navigate" class="power3">
             <image src="../resourse/power/6.png" class="icon" mode="" />
             <view class="box-txt">
-                <text class="box-text-up">网点自寄</text>
-                <text class="box-txt-down">去顺丰网点自寄</text>
+                <text class="box-txt-up">健康安全</text>
+                <text class="box-txt-down">打卡、联系人、医疗</text>
             </view>
         </navigator>
         
         </view>
         <view class="page_section">
-          <label class="block_title">最新资讯</label>
+          <navigator url="/pages/deliver/deliver" open-type="navigate" class="power">
+            <image src="../resourse/power/5.png" class="icon" mode="" />
+            <view class="box-txt">
+                <text class="box-txt-up">学习支持</text>
+                <text class="box-txt-down">在线学习、\n辅导、资料
+                </text>
+            </view>
+        </navigator>
+        
+        
+        </view>
+        <view class="page_section">
+          <label class="block_title">校园资讯</label>
       <view class="table">
         <view class="tr" wx:for="{{newsInfo}}" wx:key="*this">
           <view class="td">{{item}}</view>
