--- a/wechat/pages/mainAddress/mainAddress.wxss
+++ b/wechat/pages/mainAddress/mainAddress.wxss
@@ -47,7 +47,14 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-  margin-right: 55px;
+  margin-right:33px;
+}
+.power3{
+  display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  margin-right:25px;
 }
 .box-txt{
     display: flex;
@@ -57,6 +64,7 @@
 }
 .box-txt-up{
     font-weight: 600;
+    font-size: 15px;
 }
 .box-txt-down{
     font-size: 11px;
