--- a/wechat/pages/mainAddress/mainAddress.wxml
+++ b/wechat/pages/mainAddress/mainAddress.wxml
@@ -12,14 +12,14 @@
     <view class="block_view">
         <view class="page_section">
         <navigator url="/pages/tongcheng/tongcheng" open-type="navigate" class="power">
-            <image src="../resourse/power/1.png" class="icon" mode="" />
+            <image src="../resourse/logo/1.png" class="icon" mode="" />
             <view class="box-txt">
                 <text class="box-txt-up">课程学术</text>
                 <text class="box-txt-down">课程表、选课、成绩、考试</text>
             </view>
         </navigator>
         <navigator url="/pages/jidajian/jidajian" open-type="navigate" class="power">
-            <image src="../resourse/power/2.png" class="icon" mode="" />
+            <image src="../resourse/logo/7.png" class="icon" mode="" />
             <view class="box-txt">
                 <text class="box-txt-up">行政服务</text>
                 <text class="box-txt-down">请假、宿舍、办证</text>
@@ -28,14 +28,14 @@
         </view>
         <view class="page_section">
           <navigator url="/pages/piliangji/piliangji" open-type="navigate" class="power">
-            <image src="../resourse/power/3.png" class="icon" mode="" />
+            <image src="../resourse/logo/10.png" class="icon" mode="" />
             <view class="box-txt">
                 <text class="box-txt-up">财务后勤</text>
                 <text class="box-txt-down">缴费、查询、后勤</text>
             </view>
         </navigator>
         <navigator url="/pages/deliver/deliver" open-type="navigate" class="power2">
-            <image src="../resourse/power/4.png" class="icon" mode="" />
+            <image src="../resourse/logo/8.png" class="icon" mode="" />
             <view class="box-txt">
                 <text class="box-txt-up">图书服务</text>
                 <text class="box-txt-down">检索、借阅、资源</text>
@@ -44,14 +44,14 @@
         </view>
         <view class="page_section">
           <navigator url="/pages/deliver/deliver" open-type="navigate" class="power">
-            <image src="../resourse/power/5.png" class="icon" mode="" />
+            <image src="../resourse/logo/6.png" class="icon" mode="" />
             <view class="box-txt">
                 <text class="box-txt-up">校园社交</text>
                 <text class="box-txt-down">活动、社团、论坛</text>
             </view>
         </navigator>
         <navigator url="/pages/deliver/deliver" open-type="navigate" class="power3">
-            <image src="../resourse/power/6.png" class="icon" mode="" />
+            <image src="../resourse/logo/11.png" class="icon" mode="" />
             <view class="box-txt">
                 <text class="box-txt-up">健康安全</text>
                 <text class="box-txt-down">打卡、联系人、医疗</text>
@@ -61,7 +61,7 @@
         </view>
         <view class="page_section">
           <navigator url="/pages/deliver/deliver" open-type="navigate" class="power">
-            <image src="../resourse/power/5.png" class="icon" mode="" />
+            <image src="../resourse/logo/9.png" class="icon" mode="" />
             <view class="box-txt">
                 <text class="box-txt-up">学习支持</text>
                 <text class="box-txt-down">在线学习、\n辅导、资料
